--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,10 @@
+# This file is part of robotframework-dnslibrary.
+# https://github.com/lucamaro/robotframework-dnslibrary
+
+# Licensed under the Apache License 2.0 license:
+# http://www.opensource.org/licenses/Apache-2.0
+# Copyright (c) 2016, Luca Maragnani <luca.maragnani@gmail.com>
+
 # EditorConfig helps developers define and maintain consistent
 # coding styles between different editors and IDEs
 # editorconfig.org
