--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,6 +10,8 @@ current_version = 0.1.0
 commit = True
 tag = True
 
+[bumpversion:file:DNSLibrary/__init__.py]
+
 [bumpversion:file:DNSLibrary/version.py]
 
 [bumpversion:file:tests/test_version.py]
